<resources>
    <string name="app_name">PlayVideo_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_tab_title_trend">Trend</string>
    <string name="main_tab_title_subscription">Subscription</string>
    <string name="main_tab_title_search">Search</string>
    <string name="main_tab_title_library">Library</string>
    <string name="main_tab_title_category">Category</string>
    <string name="trend_fragment_title">Most Popular Videos</string>
    <string name="common_tool_bar_search">goToSearch</string>
    <string name="library_tool_bar_open_setting">openSetting</string>
    <string name="category_fragment_title">Channels by Category</string>
    <string name="videoID">videoId</string>
    <string name="empty_name_error">이름을 입력하세요.</string>
    <string name="empty_description_error">설명을 입력하세요.</string>
    <string name="title_require">제목</string>
    <string name="snackbarok">ok</string>
    <string name="empty_note_description_warning">설명</string>
    <string name="trend_fragment_failText">영상을 받아 올 수 없습니다.</string>
    <string name="category_fragment_failText">해당 카테고리의 영상을 받아 올 수 없습니다.</string>
</resources>