<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/trendFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/main_tab_title_trend" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/main_tab_title_category" />

    <item
        android:id="@+id/subscriptionFragment"
        android:icon="@drawable/ic_subscription"
        android:title="@string/main_tab_title_subscription" />

    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/main_tab_title_library" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/main_tab_title_search" />


</menu>